add icons on tabnavigator by react-native-vector-icons module

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,17 @@ import com.android.build.OutputFile
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+/*
+ *  module: react-native-vector-icons
+ *  author: add by alex
+ *  date:   2017-8-17
+ *
+ */
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+
+
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
