--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"expo": "^20.0.2",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-action-button": "^2.7.2",
