--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-action-button": "^2.7.2",
+		"react-native-camera": "^0.10.0",
 		"react-native-elements": "^0.16.0",
 		"react-native-image-picker": "^0.26.4",
+		"react-native-qrcode-scanner": "0.0.17",
 		"react-native-vector-icons": "^4.3.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
