--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,7 @@ dependencies {
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-wechat')
     compile project(':react-native-camera')
+    compile project(':react-native-yunpeng-alipay')
 }
 
 // Run this once to be able to run the application with BUCK
