--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
     <!-- add by alex, on 082917 -->
     <uses-permission android:name="android.permission.VIBRATE"/>
 
+    <!-- for react-native-yunpeng-alipay -->
+    <!-- add by alex, on 091117 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -47,6 +51,14 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <activity android:name="com.alipay.sdk.app.H5PayActivity"
+                  android:configChanges="orientation|keyboardHidden|navigation"
+                  android:exported="false"
+                  android:screenOrientation="behind"/>
+        <activity android:name="com.alipay.sdk.auth.AuthActivity"
+                  android:configChanges="orientation|keyboardHidden|navigation"
+                  android:exported="false"
+                  android:screenOrientation="behind" />
     </application>
 
 </manifest>
