--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-native-elements": "^0.16.0",
 		"react-native-image-picker": "^0.26.4",
 		"react-native-qrcode-scanner": "0.0.17",
+		"react-native-storage": "^0.2.2",
 		"react-native-vector-icons": "^4.3.0",
 		"react-native-wechat": "^1.9.9",
 		"react-native-yunpeng-alipay": "^2.0.0",
