--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+        <meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}"/>
+        <meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}"/>
+
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
         <activity android:name="com.alipay.sdk.app.H5PayActivity"
                   android:configChanges="orientation|keyboardHidden|navigation"
