--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"configureJPush": "node node_modules/jpush-react-native/JPushConfiguration.js",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
+		"jcore-react-native": "^1.1.8-beta2",
+		"jpush-react-native": "^2.1.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
 		"react-native-action-button": "^2.7.2",
