--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,6 +113,10 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        manifestPlaceholders = [
+            JPUSH_APPKEY: '4c798aa0aa44d00644e8e2b2',
+            APP_CHANNEL: 'developer-default'
+        ]
     }
     signingConfigs {
         release {
@@ -163,6 +167,8 @@ dependencies {
     compile project(':react-native-camera')
     compile project(':react-native-yunpeng-alipay')
     compile project(':react-native-baidu-map')
+    compile project(':jpush-react-native')
+    compile project(':jcore-react-native')
 }
 
 // Run this once to be able to run the application with BUCK
