--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -169,6 +169,7 @@ dependencies {
     compile project(':react-native-baidu-map')
     compile project(':jpush-react-native')
     compile project(':jcore-react-native')
+    compile project(':react-native-fs')
 }
 
 // Run this once to be able to run the application with BUCK
