--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-native-action-button": "^2.7.2",
 		"react-native-baidu-map": "^0.6.0",
 		"react-native-camera": "^0.10.0",
+		"react-native-circular-progress": "^0.1.2",
 		"react-native-elements": "^0.16.0",
 		"react-native-fs": "^2.9.2",
 		"react-native-image-picker": "^0.26.4",
