--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -170,6 +170,7 @@ dependencies {
     compile project(':jpush-react-native')
     compile project(':jcore-react-native')
     compile project(':react-native-fs')
+    compile project(':react-native-picker')
 }
 
 // Run this once to be able to run the application with BUCK
