--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-elements": "^0.16.0",
 		"react-native-fs": "^2.9.2",
 		"react-native-image-picker": "^0.26.4",
+		"react-native-looped-carousel": "^0.1.7",
 		"react-native-permissions": "^1.0.6",
 		"react-native-picker": "^4.3.5",
 		"react-native-qrcode-scanner": "0.0.17",
