--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,7 @@ dependencies {
     compile project(':jcore-react-native')
     compile project(':react-native-fs')
     compile project(':react-native-picker')
+    compile project(':react-native-linear-gradient')
 }
 
 // Run this once to be able to run the application with BUCK
